# json-adapter

./: Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
examples/: rbac_policy.json
src/: errors.rs  json_adapter.rs  lib.rs  models.rs
tests/: test.rs
